# Pliris-BA-Bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  PHASE_1_DELIVERABLES.md  README.md  README_PHASE_1.md  README_PHASE_2.md  README_PHASE_3_STEP_1.md  README_PHASE_3_STEP_2.md  README_PHASE_3_STEP_3.md  README_PHASE_3_STEP_3A.md  README_PHASE_3_STEP_3B.md  README_PHASE_3_STEP_4.md  README_PHASE_4_STEP_1.md  README_PHASE_4_STEP_2.md  README_PHASE_4_STEP_3.md  README_PHASE_4_STEP_4.md  README_PHASE_4_STEP_5.md  README_PHASE_5_STEP_1.md  README_PHASE_5_STEP_2.md  README_PHASE_5_STEP_3.md  README_PHASE_5_STEP_4.md  README_PHASE_5_STEP_5.md  README_PHASE_5_STEP_6.md  README_PHASE_6_STEP_2.md  README_PHASE_6_STEP_5.md  README_PHASE_7_STEP_1A.md  README_PHASE_7_STEP_1B.md  README_PHASE_7_STEP_1C.md  README_PHASE_7_STEP_1D.md  README_PHASE_7_STEP_1E.md  README_PHASE_7_STEP_1F.md  README_PHASE_7_STEP_1G.md  README_PHASE_7_STEP_1H.md  README_PHASE_7_STEP_2A.md  README_PHASE_7_STEP_2B.md  docker-compose.yml  (+3 more)
api/: __init__.py  conversation_tokens.py  dependencies.py  developer_access.py  guest_access.py  main.py  middleware.py
app/: Home.py  __init__.py  chat_state.py  developer_access.py  navigation.py  source_view.py  ui_auth.py  ui_config.py
data/: corpus_manifest.yaml
docs/: architecture.md  evaluation.md  ingestion.md  monitoring.md  rubric-mapping.md  setup.md  usage.md
evaluation/: hosted_retriever.py  llm_eval.py  llm_evidence_package.py  llm_finalist_contract.py  llm_finalist_human_review.py  llm_runner.py  local_reranker.py  metrics.py  reranked_retriever.py  retrieval_benchmark.py  retrieval_eval.py  retrieval_metrics.py  retrieval_runner.py  scope_eval.py
ingestion/: __init__.py  chunk_documents.py  clean_text.py  embedding_service.py  extract_pdf.py  generate_embeddings.py  index_chunks.py  layout_audit.py  layout_filter.py  manifest.py  manifest_loader.py  models.py  page_chunker.py  run.py  (+6 more)
(+187 files in other folders)
