[project]
name = "pliris-ba-bot"
version = "0.1.0"
description = "A domain-restricted agentic RAG assistant for Business Analysis and Project Management practices."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Dumebi Nkwo" }
]
dependencies = [
    "fastapi[standard]>=0.139.0,<1.0.0",
    "openai>=2.45.0,<3.0.0",
    "psycopg[binary,pool]>=3.3.4,<4.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "rank-bm25>=0.2.2",
    "supabase>=2.31.0,<3.0.0",
    "tenacity>=9.1.0,<10.0.0",
]

[project.optional-dependencies]
ingestion = [
    "pymupdf>=1.26.0,<2.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "tiktoken>=0.11.0,<1.0.0",
]
reranking = [
    "sentence-transformers>=5.5.0,<6.0.0",
]
ui = [
    "pandas>=3.0.0,<4.0.0",
    "streamlit>=1.58.0,<2.0.0",
]
evaluation = [
    "pandas>=3.0.0,<4.0.0",
    "tqdm>=4.67.0,<5.0.0",
]
dev = [
    "mypy>=1.17.0,<2.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-cov>=6.2.0,<7.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[tool.uv]
default-groups = ["dev"]
link-mode = "copy"

[dependency-groups]
dev = [
    "mypy>=1.17.0,<2.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.2.0,<7.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that call hosted services and require a configured .env file",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
